--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -406,6 +406,34 @@ $defs:
           type: string
           maxLength: 512
           example: "ex1, ex2, ex3"
+      sap:
+        description: Object containing data specific to the SAP workload
+        type: object
+        properties:
+          sap_system:
+            type: boolean
+            description: Indicates if SAP is installed on the system
+          sids:
+            type: array
+            uniqueItems: true
+            items:
+              description: The SAP system ID (SID)
+              type: string
+              example: "H2O, ABC, XYZ"
+              maxLength: 3
+              pattern: '^[A-Z][A-Z0-9]{2}$'
+          instance_number:
+            type: string
+            description: The instance number of the SAP HANA system (a two-digit number between 00 and 99)
+            example: '03, 05, 99'
+            maxLength: 2
+            pattern: '^[0-9]{2}$'
+          version:
+            type: string
+            description: The version of the SAP HANA lifecycle management program
+            example:  '1.00.122.04.1478575636, 2.00.122.04.1478575636, 3.00.122.04.1478575636'
+            maxLength: 22
+            pattern: '^[0-9]\.[0-9]{2}\.[0-9]{3}\.[0-9]{2}\.[0-9]{10}$'
       sap_system:
         type: boolean
         description: Indicates if SAP is installed on the system
