--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -570,7 +570,7 @@ $defs:
             example: '15.2.0, 12.5.3, 10.1.0'
             maxLength: 30
             x-wildcard: true
-      update_method:
+      system_update_method:
         description: System update method
         type: string
         maxLength: 10 # right a test with 11 chars
