--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -573,6 +573,6 @@ $defs:
       system_update_method:
         description: System update method
         type: string
-        maxLength: 
+        maxLength: 10
         enum: [dnf, rpm-ostree, yum]
         example: "rpm-ostree"
