--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -323,9 +323,9 @@ $defs:
           name:
             description: Name of the distro/os
             type: string
-            maxLength: 6
+            maxLength: 12
             enum: [RHEL, CentOS, CentOS Linux]
-            example: "RHEL, CentOS, CentOS Linux, RHEL"
+            example: "RHEL, CentOS, CentOS Linux"
       os_release:
         type: string
         maxLength: 100
