--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,13 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Use Node.js
-      uses: actions/setup-node@v1
+    - name: Run spectral
+      uses: stoplightio/spectral-action@latest
       with:
-        node-version: 12.x
-
-    - run: npm i -g @stoplight/spectral-cli
-    - run: spectral lint schemas/system_profile/v1.yaml
+        file_glob: 'schemas/system_profile/v*.yaml'
 
   test:
     runs-on: ubuntu-20.04
