--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -1,4 +1,5 @@
-formats: ["json-schema"]
+extends: "spectral:oas"
+formats: ["oas2", "oas3"]
 rules:
   property-snake-case:
     description: Property names should match snake case
@@ -58,49 +59,55 @@ rules:
 
 # TODO: remove these exceptions as we clean up the schema and clarify  in RHCLOUD-8147
 except:
-  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/device': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/label': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options/properties/name': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options/properties/value': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/mtu': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/YumRepo/properties/id': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/YumRepo/properties/name': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/YumRepo/properties/gpgcheck': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/YumRepo/properties/enabled': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/YumRepo/properties/base_url': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/DnfModule/properties/name': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/DnfModule/properties/stream': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/InstalledProduct/properties/name': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/cpu_flags/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/kernel_modules/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/running_processes/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/installed_services/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/enabled_services/items': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/number_of_cpus': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/number_of_sockets': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/cores_per_socket': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/system_memory_bytes': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/infrastructure_type': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/infrastructure_vendor': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/bios_vendor': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/bios_version': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/bios_release_date': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/os_release': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/os_kernel_version': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/arch': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/last_boot_time': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/subscription_status': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/subscription_auto_attach': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/katello_agent_running': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/satellite_managed': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/cloud_provider': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/insights_client_version': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/insights_egg_version': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/SystemProfile/properties/captured_date': ['property-example', 'property-description']
-  'schemas/system_profile/v1.yaml#/$defs/NestedObject': ['property-arbitrary-object-without-keys']
-  'schemas/system_profile/v1.yaml#/$defs/NestedObject/additionalProperties/oneOf/1/not': ['property-arbitrary-object-without-keys']
-  'schemas/system_profile/v1.yaml#/$defs/DiskDevice/properties/options': ['property-arbitrary-object-without-keys']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv4_addresses/items': ['property-string-max-length']
-  'schemas/system_profile/v1.yaml#/$defs/NetworkInterface/properties/ipv6_addresses/items': ['property-string-max-length']
+  'schemas/system_profile/v1.yaml#/%24defs/DiskDevice/properties/device': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/DiskDevice/properties/label': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/DiskDevice/properties/options/properties/name': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/DiskDevice/properties/options/properties/value': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/NetworkInterface/properties/mtu': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/YumRepo/properties/id': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/YumRepo/properties/name': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/YumRepo/properties/gpgcheck': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/YumRepo/properties/enabled': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/YumRepo/properties/base_url': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/DnfModule/properties/name': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/DnfModule/properties/stream': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/InstalledProduct/properties/name': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/NetworkInterface/properties/ipv4_addresses/items': ['property-example', 'property-description', 'property-string-max-length']
+  'schemas/system_profile/v1.yaml#/%24defs/NetworkInterface/properties/ipv6_addresses/items': ['property-example', 'property-description', 'property-string-max-length']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/cpu_flags/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/kernel_modules/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/running_processes/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/installed_services/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/enabled_services/items': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/number_of_cpus': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/number_of_sockets': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/cores_per_socket': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/system_memory_bytes': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/infrastructure_type': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/infrastructure_vendor': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bios_vendor': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bios_version': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bios_release_date': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/os_release': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/os_kernel_version': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/arch': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/last_boot_time': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/subscription_status': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/subscription_auto_attach': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/katello_agent_running': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/satellite_managed': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/cloud_provider': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/insights_client_version': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/insights_egg_version': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/captured_date': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bootc_status/properties/booted': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bootc_status/properties/rollback': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bootc_status/properties/cachedUpdate':
+    - property-example
+    - property-snake-case
+  'schemas/system_profile/v1.yaml#/%24defs/SystemProfile/properties/bootc_status/properties/staged': ['property-example', 'property-description']
+  'schemas/system_profile/v1.yaml#/%24defs/NestedObject': ['property-arbitrary-object-without-keys']
+  'schemas/system_profile/v1.yaml#/%24defs/NestedObject/additionalProperties/oneOf/1/not': ['property-arbitrary-object-without-keys']
+  'schemas/system_profile/v1.yaml#/%24defs/DiskDevice/properties/options': ['property-arbitrary-object-without-keys']
+  'schemas/system_profile/v1.yaml#/%24id': ['property-description', 'property-example']
+  'schemas/system_profile/v1.yaml#/%24schema': ['property-description', 'property-example']
