--- a/schemas/system_profile/v1.yaml
+++ b/schemas/system_profile/v1.yaml
@@ -235,10 +235,12 @@ $defs:
         minimum: 0
         maximum: 2147483647
       threads_per_core:
+        description: Number of CPU threads per CPU core. Typical values: 1, 2, 4
         type: integer
         format: int32
         minimum: 0
         maximum: 2147483647
+        example: 2
       system_memory_bytes:
         type: integer
         format: int64
